# aiops-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LIMITATIONS.md  Makefile  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json5  requirements-dev.txt  requirements-docs.txt
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  fuzz.yml  image.yml  pages.yml  release.yml  sbom.yml
audit/: 00-inventory.md  01-baseline.md  02-security-findings.md  03-final-report.md
audit/2026-06-14/: 00-baseline.md  01-findings.md  02-report.md
config/: inventory.example.yaml
deploy/: README.md  RELEASE-CHECKLIST.md  zarf.yaml
deploy/helm/praxis/: .helmignore  Chart.yaml  values-prod.yaml  values.yaml
deploy/helm/praxis/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
deploy/helm/praxis/tests/: deployment_test.yaml  networkpolicy_test.yaml  serviceaccount_test.yaml  values_prod_test.yaml
deploy/systemd/: praxis.service
deploy/systemd/praxis.service.d/: hardening.conf  network-lockdown.conf.example
docs/: architecture.md  backlog.md  first-session.md  guide.md  index.md  migration-import-prototype.md
docs/adr/: 0001-purpose-scope-and-self-contained-monorepo.md  0002-self-contained-store-strategy.md  0003-bitemporal-fact-model.md  0004-tiered-authority.md  0005-execution-trust-boundary.md  0006-mcp-transport-and-auth.md  0007-drift-engine.md  0008-tamper-evident-audit.md  0009-stpa-as-requirements-method.md  0010-skills-architecture.md  0011-external-fleet-audit-2026-06.md  0012-internal-audit-2026-06.md  0013-actuation-and-input-hardening-2026-06.md  0014-dependency-posture-and-pydantic.md  0015-deep-security-architecture-review-2026-06.md  0016-approval-hardening-and-enforcement-wave-2026-06.md  0017-full-audit-pass-2026-06-12.md  0018-backlog-remediation-wave-2026-06-12.md  0019-runtime-evidence-and-anchor-2026-06-12.md  0020-test-and-deploy-hardening-wave-2026-06-12.md  0021-cross-fleet-pattern-integration-wave-2026-06-13.md  0022-stpa-traceability-completion-2026-06-14.md  0023-audit-evidence-retention-tiers-2026-06-14.md  0024-cis-talos-fact-predicate-schema-2026-06-14.md  0025-ssrf-rebinding-aware-resolution-2026-06-14.md  0026-deploy-config-cleanup-2026-06-14.md  0027-helm-chart-unit-tests-2026-06-14.md  0028-cis-talos-baseline-implementation-2026-06-14.md  0029-non-forgeable-checkpoint-stamper-2026-06-14.md  0030-rfc3161-stamper-implementation-2026-06-14.md  0031-talosctl-client-side-health-probe-2026-06-14.md  0032-container-image-build-2026-06-14.md  0033-consolidate-dependency-automation-on-renovate.md  0034-opt-in-deploy-network-hardening-2026-06-14.md  0035-release-publish-pipeline-2026-06-14.md  0036-required-security-gates-in-ci-2026-06-14.md  0037-multi-sink-audit-fanout-2026-06-14.md  0038-audit-request-client-correlation-2026-06-14.md  0039-deep-audit-2026-06-14.md  0039-second-full-audit-pass-2026-06-14.md  (+6 more)
docs/governance/: compliance-controls.json  compliance-map.md  regulatory-deadlines.md
docs/roadmap/: iam-access-and-secrets-expansion.md
docs/runbooks/: operate.md  self-audit.md
docs/schema/: compliance-controls.schema.json  skill-manifest.schema.json  tools.schema.json
docs/stpa/: 01-losses.md  02-hazards.md  03-system-constraints.md  04-control-structure.md  05-ucas.md  06-loss-scenarios.md  07-security-constraints.md  README.md
evaluation/: skills_golden.json
evaluation/drift/: known_good.json  observed.json
scripts/: eval.py  fuzz.py  gen_schema.py  validate_compliance.py  verify_audit.py
skills/audit-verification/: SKILL.md
skills/drift-triage/: SKILL.md
skills/fleet-inventory/: SKILL.md
skills/ssh-hardening/: SKILL.md
skills/talos-operations/: SKILL.md
src/praxis/: __init__.py  __main__.py  _ssrf.py  clock.py  config.py  context.py  http_server.py  schema.py  server.py
src/praxis/actuation/: __init__.py  ansible.py  base.py  credentials.py  opentofu.py  runbook.py  ssh.py  talosctl.py
src/praxis/audit/: __init__.py  evidence.py  merkle.py  rfc3161.py  session.py
src/praxis/collectors/: __init__.py  aide.py  base.py  cis.py  osquery.py  probe.py  talos.py
src/praxis/drift/: __init__.py  cis.py  converge.py  engine.py  findings.py  sources.py
src/praxis/execution/: __init__.py  audit.py  contract.py  correlation.py  patterns.py  policy.py  redaction.py  runner.py
src/praxis/governance/: __init__.py  catalog.py  validate.py
src/praxis/model/: __init__.py  facts.py
src/praxis/skills/: __init__.py  dispatch.py  eval.py  manifest.py  registry.py
src/praxis/store/: __init__.py  base.py  postgres.py  sqlite.py
src/praxis/tools/: __init__.py  _audited.py  actuate.py  collect.py  drift.py  emergency.py  registry.py  state.py
tests/: test_actuate_trifecta.py  test_audited_reads.py  test_classification_filter.py  test_http_server.py  test_schema_drift.py  test_server.py  test_server_bounds.py  test_smoke.py  test_tool_validation.py  test_transport_guard.py  test_trifecta_containment.py
tests/actuation/: test_adapters.py  test_credentials.py  test_hardening.py  test_host_type_gate.py
tests/audit/: test_evidence.py  test_merkle.py  test_rfc3161_tsa.py  test_runtime_evidence.py  test_session.py
tests/collectors/: test_collectors.py  test_ingest_tool.py  test_numeric_hardening.py
tests/drift/: test_cis.py  test_converge_gate.py  test_engine.py  test_regression.py  test_sources.py
tests/execution/: test_audit.py  test_audit_hardening.py  test_audit_multisink.py  test_contract.py  test_correlation.py  test_kill_switch.py  test_patterns.py  test_policy.py  test_policy_probe.py  test_redaction.py  test_runner.py
tests/governance/: __init__.py  test_compliance.py
tests/skills/: test_dispatch.py  test_eval_gate.py
tests/store/: test_append_only.py  test_backend_parity.py  test_postgres.py  test_postgres_schema.py  test_roundtrip.py  test_store_hardening.py  test_temporal.py
