[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praxis"
version = "0.0.0"
description = "Unified AI-operations MCP: bitemporal fleet model, drift engine, tiered audited actuator."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Roman Mednitzer" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]
# postgres = ["psycopg[binary]"]   # production store backend (BL-006)
# http = []                         # streamable-HTTP transport (BL-012)

[project.scripts]
praxis = "praxis.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/praxis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: asserts are the point in tests. S105/S106: tests use literal tokens and
# confirmation strings to exercise the approval and redaction machinery; they are
# not real secrets.
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"
