[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "praxis"
version = "0.0.0"
description = "Unified AI-operations MCP: bitemporal fleet model, drift engine, tiered audited actuator."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Roman Mednitzer" }]
# Runtime dependencies are intentionally minimal and license-vetted. Self-contained
# means no coupling to the sibling fleet repositories (ADR-0001), not zero PyPI use:
# pydantic (MIT) backs declarative validation at the external-input boundary, and
# psycopg is the optional production store backend (ADR-0014).
dependencies = ["pydantic>=2,<3"]

# Bounded, not exact-pinned (BL-088): majors cannot land unreviewed, while CI
# exactness comes from the hash-locked requirements-dev.txt (Renovate maintains
# both). Local installs float within these bounds.
[project.optional-dependencies]
dev = [
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<3",
    "pytest>=9,<10",
    "coverage>=7,<8",
    # The tsa stamper is exercised by the suite, so CI installs its extras. Listed
    # directly (kept in lockstep with the tsa extra below) rather than as a
    # self-referential praxis[tsa], which trips strict resolvers building from source.
    "asn1crypto>=1.5,<2",
    "cryptography>=49,<50",
]
postgres = ["psycopg[binary]>=3.2,<4"]  # production store backend (BL-006)
# Optional RFC 3161 timestamp-authority stamper (BL-095, ADR-0029): asn1crypto (MIT)
# for the TSP/CMS ASN.1 models, cryptography for the signature/cert verification. Not
# in the execution core; selected only when the operator opts in with praxis[tsa].
tsa = ["asn1crypto>=1.5,<2", "cryptography>=49,<50"]
# http = []                             # streamable-HTTP transport (BL-012)

[project.scripts]
praxis = "praxis.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/praxis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: asserts are the point in tests. S105/S106: tests use literal tokens and
# confirmation strings to exercise the approval and redaction machinery; they are
# not real secrets.
"tests/**" = ["S101", "S105", "S106"]
# S608: the store backends build WHERE clauses from a fixed, internal set of
# column predicates; every value is bound as a parameter (?, %s), table names are
# literals, and seq is an inline subselect over a literal table. The interpolated
# parts carry no caller input.
"src/praxis/store/sqlite.py" = ["S608"]
"src/praxis/store/postgres.py" = ["S608"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

# psycopg is an optional extra (BL-006); the package must type-check without it.
[[tool.mypy.overrides]]
module = ["psycopg.*", "asn1crypto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src/praxis"]

# The gate (BL-053). Source-based measurement (every file under src/praxis counts,
# imported or not) reads 91 percent without the postgres extra, whose live tests
# skip; 90 is the erosion floor under that honest denominator, not a target.
[tool.coverage.report]
fail_under = 90
